<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_news">

    <fragment
        android:id="@+id/nav_account"
        android:name="com.example.studentoffice.ui.account.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/nav_news"
        android:name="com.example.studentoffice.ui.news.NewsFragment"
        android:label="@string/menu_news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/nav_requests_to_admin"
        android:name="com.example.studentoffice.ui.requestsToAdmin.RequestsToAdminFragment"
        android:label="@string/menu_requests_to_admin"
        tools:layout="@layout/fragment_requests_to_admin" />

    <fragment
        android:id="@+id/nav_visit_requests"
        android:name="com.example.studentoffice.ui.visitRequests.VisitRequestsFragment"
        android:label="@string/menu_visit_requests"
        tools:layout="@layout/fragment_visit_requests" />

    <fragment
        android:id="@+id/nav_group_statistics"
        android:name="com.example.studentoffice.ui.groupStatistics.GroupStatisticsFragment"
        android:label="@string/menu_group_statistics"
        tools:layout="@layout/fragment_group_statistic" />
</navigation>