<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorBackground"
    android:gravity="center"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editTextLogin"
        style="@style/EditText.Login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_login"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editTextPassword"
        style="@style/EditText.Login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        android:inputType="textPassword" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundGravity="center">

        <Button
            android:id="@+id/buttonSignIn"
            style="@style/Button.Common"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_sign_in" />

        <ProgressBar
            android:id="@+id/progressBarLogin"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>

</LinearLayout>