<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navHead"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="?attr/imageHeader"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">


    <ImageView
        android:id="@+id/imageHeadView"
        android:layout_width="@dimen/nav_header_avatar_diameter"
        android:layout_height="@dimen/nav_header_avatar_diameter"
        android:layout_marginTop="6dp"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/person" />

    <TextView
        android:id="@+id/nameProfile"
        style="@style/TextViewHeader"
        android:layout_width="206dp"
        android:layout_height="35dp"
        android:layout_marginTop="2dp"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:textSize="@dimen/nav_header_text_size"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageHeadView" />

    <TextView
        android:id="@+id/groupProfile"
        style="@style/TextViewHeader"
        android:layout_width="206dp"
        android:layout_height="24dp"
        android:text="@string/nav_header_subtitle"
        android:textSize="@dimen/nav_header_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.004"
        app:layout_constraintStart_toStartOf="@+id/nameProfile"
        app:layout_constraintTop_toBottomOf="@+id/nameProfile" />

    <ImageView
        android:id="@+id/imageViewLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@drawable/ic_logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageHeadView"
        app:layout_constraintVertical_bias="0.07999998" />


</androidx.constraintlayout.widget.ConstraintLayout>
